--- a/packages/excalidraw/locales/en.json
+++ b/packages/excalidraw/locales/en.json
@@ -120,7 +120,8 @@
       "createEmbed": "Create link & embed",
       "label": "Link",
       "labelEmbed": "Link & embed",
-      "empty": "No link is set"
+      "empty": "No link is set",
+      "copy": "Copy link"
     },
     "lineEditor": {
       "edit": "Edit line",
